--- a/webapp/src/index.html
+++ b/webapp/src/index.html
@@ -7,7 +7,7 @@
   <title></title>
   <meta name="description" content="">
   <meta name="HandheldFriendly" content="True">
-  <meta name="viewport" con[fxztent="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0">
   <meta http-equiv="cleartype" content="on">
   <link rel="stylesheet" href="stylesheets/normalize.css">
   <link rel="stylesheet" href="stylesheets/dati.css">
